--- a/docs/app.css
+++ b/docs/app.css
@@ -3,6 +3,10 @@
   padding: 0;
 }
 
+body {
+	font-family: "Hiragino Kaku Gothic ProN","メイリオ", sans-serif;
+}
+
 #wrapper {
   display: table-cell;
   text-align: center;
