--- a/docs/app.css
+++ b/docs/app.css
@@ -4,7 +4,9 @@
 }
 
 body {
-	font-family: "Hiragino Kaku Gothic ProN","メイリオ", sans-serif;
+  border-collapse: separate;
+  border-spacing: 20px 0;
+  font-family: "Hiragino Kaku Gothic ProN","メイリオ", sans-serif;
 }
 
 #wrapper {
